# bird-watcher

./: .env_sample  .gitignore  README.md  build_notebooks.py  nbdev.yml  pyproject.toml  sidebar.yml
_proc/: 01-setup.ipynb  03-poll.ipynb  06-persist.ipynb  07-slack.ipynb  08-web-hello.ipynb  09-gallery.ipynb  10-digest.ipynb  sidebar.yml
_proc/_docs/: 01-setup.html  01-setup.html.md  search.json  sitemap.xml
_proc/_docs/site_libs/bootstrap/: bootstrap-802e4451f23d0297567e827ee773d37b.min.css
_proc/_ignore/: 02-stream.ipynb  03-poll.ipynb  06-persist.ipynb  07-slack.ipynb  08-web-hello.ipynb  09-gallery.ipynb  10-digest.ipynb
_proc/data/: birds.db
_proc/tutorials/data/: birds.db
bird_watcher/: _modidx.py  core.py  daily_summary.py  detect.py  environment.py  find_birds.py  get_image.py  name_bird.py  save_sighting.py  send_alert.py  species.py  web_app.py
bird_watcher.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
data/: README.md
data/models/hub/models--dimeshanthoney--dog-breed-classifier/refs/: main
data/tests-model-cache/models--dimeshanthoney--dog-breed-classifier/snapshots/4b13793211cddcf63f67b915a0b24eaa3aa1215d/: Image_classify.keras
docs/: README.md
docs/diagrams/: 00-master.excalidraw  00-technical.excalidraw  01-step.excalidraw  02-step.excalidraw  03-step.excalidraw  04-step.excalidraw  05-step.excalidraw  06-step.excalidraw  07-step.excalidraw  08-step.excalidraw  09-step.excalidraw  10-step.excalidraw
src/bird_watcher/: __init__.py  __main__.py
tutorials/: 01-setup.ipynb  02-stream.ipynb  03-poll.ipynb  04-detect.ipynb  05-identify.ipynb  06-persist.ipynb  07-slack.ipynb  08-web-hello.ipynb  09-gallery.ipynb  10-digest.ipynb  README.md
tutorials/data/models/Birds-Classifier-EfficientNetB2/: .gitattributes  README.md
(+4 files in other folders)
